--- a/src/main/webapp/Views/Dashboard.xhtml
+++ b/src/main/webapp/Views/Dashboard.xhtml
@@ -1,4 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
@@ -7,6 +8,18 @@
 <h:body>
 
 	<h1>Welcome to dashboars</h1>
+	<h:body>
+		<ui:composition template="/Views/Template/MainTemplate.xhtml">
+			<ui:define name="pageTitle">
+            Welcome [Dashboard.xhtml]
+        </ui:define>
+
+			<ui:define name="mainContent">
+				<h1>Real Madrid, Champion!</h1>
+			</ui:define>
+		</ui:composition>
+	</h:body>
+
 
 </h:body>
 
