--- a/src/main/webapp/Views/Dashboard.xhtml
+++ b/src/main/webapp/Views/Dashboard.xhtml
@@ -7,7 +7,6 @@
 
 <h:body>
 
-	<h1>Welcome to dashboars</h1>
 	<h:body>
 		<ui:composition template="/Views/Template/MainTemplate.xhtml">
 			<ui:define name="pageTitle">
@@ -15,7 +14,7 @@
         </ui:define>
 
 			<ui:define name="mainContent">
-				<h1>Real Madrid, Champion!</h1>
+				<h2>Welcome to dashboard</h2>
 			</ui:define>
 		</ui:composition>
 	</h:body>
