--- a/src/main/webapp/Views/Template/MainTemplate.xhtml
+++ b/src/main/webapp/Views/Template/MainTemplate.xhtml
@@ -10,7 +10,7 @@
 <h:body>
     <div id="divTop">
         <ui:insert name="top">
-            <ui:include src="/Views/Template/Top.xhtml"/>
+            <ui:include src="/Views/Template/top.xhtml"/>
         </ui:insert>
     </div>
     
