--- a/src/main/webapp/Views/EntityView.xhtml
+++ b/src/main/webapp/Views/EntityView.xhtml
@@ -70,7 +70,7 @@
 				  <h:form id="addForm">
 					<div>
 				    	Entity Name: 
-				    	<p:inputText value="#{entityController.entity.name}" />
+				    	<p:inputText value="#{entityController.entity.name}" required />
 				    	
 				    	<br /><br />
 				    	<p:commandButton value="Save" action="#{entityController.createPressed()}"
