--- a/src/main/webapp/Views/Practise/createPractise.xhtml
+++ b/src/main/webapp/Views/Practise/createPractise.xhtml
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:p="http://primefaces.org/ui">
-     
-    <h:head>
-        <title>Create Entity</title>
-        
-        <style type="text/css">
-			html {
-			        overflow: auto;
-			}
-		</style>
-        
-        <!-- <style type="text/css">
-            .ui-widget {
-                font-size: 100%;
-            }
-        </style> -->
-    </h:head>
-     
-    <h:body>
- 
- 	<h:form id="entityForm" style="height: 120px">
-		<p:focus />
-	    <!-- <p:panelGrid columns="2" > 
-			Entity Name:
-		<p:inputText />
-		
-	    </p:panelGrid>  -->
-	    
-	    <div>
-	    	Entity Name: 
-	    	<p:inputText />
-	    	
-	    	<br /><br />
-	    	<p:commandButton value="Save" />
-	    	
-	    </div>	    
-		
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:f="http://java.sun.com/jsf/core"
+	>
+
+<h:head>
+	<title>Create Entity</title>
+
+	<style type="text/css">
+html {
+	overflow: auto;
+}
+</style>
+</h:head>
+
+<h:body>
+
+	<!-- 	<p:panel header="Create Practise" style="margin-bottom:10px;"> -->
+	<h:form>
+		<h:panelGrid columns="2" cellpadding="5">
+
+
+			<h:outputLabel for="practiseName" value="Practise Name" />
+			<h:inputText id="practiseName"
+				value="#{practiseController.practiseName}" />
+			<!-- <h:panelGroup> -->
+			<p:outputLabel for="entities" value="Country: " />
+			<p:selectOneMenu id="entities"
+				value="#{practiseController.entityName}" style="width:150px">
+				<!-- <p:ajax listener="#{dropdownView.onCountryChange}" /> -->
+				<f:selectItem itemLabel="Select Entity" itemValue=""
+					noSelectionOption="true" />
+				<f:selectItems value="#{practiseController.listEntities}" />
+			</p:selectOneMenu>
+			<!-- </h:panelGroup> -->
+		</h:panelGrid>
+
+		<p:separator />
+
+		<p:commandButton value="Submit"
+			actionListener="#{practiseController.createPractiseClicked}"
+			icon="ui-icon-check" />
+		<!--  </p:panel> -->
 	</h:form>
-        
-    </h:body>
-     
+</h:body>
 </html>
