--- a/src/main/webapp/Views/Template/top.xhtml
+++ b/src/main/webapp/Views/Template/top.xhtml
@@ -52,9 +52,11 @@
 				</p:submenu>
 
 				<p:submenu label="Entity">
-					<p:menuitem value="Create"
-						actionListener="#{entityController.createEntity}" />
 					<p:menuitem value="View" action="#{entityController.viewEntity()}" />
+				</p:submenu>
+				
+				<p:submenu label="Payer">
+					<p:menuitem value="View" action="#{payerController.view()}" />
 				</p:submenu>
 
 				<f:facet name="options">
