--- a/src/main/webapp/Views/Practise/PractiseView.xhtml
+++ b/src/main/webapp/Views/Practise/PractiseView.xhtml
@@ -78,7 +78,9 @@
 
 						<h:outputLabel for="practiseName" value="Practise Name" />
 						<h:inputText id="practiseName"
-							value="#{practiseController.practise.name}" />
+							value="#{practiseController.practise.name}" >
+							<f:validator validatorId="custom.PractiseValidator"/>
+							 </h:inputText>
 						<!-- <h:panelGroup> -->
 
 						<p:outputLabel for="entities" value="Entity: " />
@@ -95,6 +97,8 @@
 					<p:separator />
 
 					<p:commandButton value="Submit"
+					validateClient="true"
+					ajax="false"
 						action="#{practiseController.createEditLogic()}"
 						update=":practiseTable" oncomplete="PF('dlg2).hide()"
 						icon="ui-icon-check" />
