SharedData Fixed issue #

--- a/src/main/webapp/Views/Practise/PractiseView.xhtml
+++ b/src/main/webapp/Views/Practise/PractiseView.xhtml
@@ -76,7 +76,7 @@
 				height="250">
 
 				<h:form id="createForm">
-					<p:messages id="msgs" />
+					<p:messages id="msgs" showDetail="true" />
 					<h:panelGrid columns="3" cellpadding="5">
 
 						<p:outputLabel for="practiseName" value="Practise Name:" />
