User View added

--- a/src/main/webapp/Views/Practise/PractiseView.xhtml
+++ b/src/main/webapp/Views/Practise/PractiseView.xhtml
@@ -89,7 +89,7 @@
 
 						<p:outputLabel for="entities" value="Entity: " />
 						<p:selectOneMenu id="entities" value="#{practiseController.currentEntity}"
-							converter="practiseConverter" panelStyle="width:180px" effect="fade" 
+							converter="entityConverter" panelStyle="width:180px" effect="fade" 
 							var="t" style="width:160px" filter="true"
 							filterMatchMode="startsWith">
 							
