Remaining fields added Converter remnaining

--- a/src/main/webapp/Views/User/UserView.xhtml
+++ b/src/main/webapp/Views/User/UserView.xhtml
@@ -31,6 +31,9 @@
 					<p:panelGrid id="panelGrid" columns="2">
 						<p:outputLabel for="tfUsername" value="UserName:" />
 						<p:inputText id="tfUsername" value="${userController.user.name}"></p:inputText>
+						
+						<p:outputLabel for="tfPassword" value="Password:" />
+						<p:inputText id="tfPassword" value="${userController.user.password}"></p:inputText>
 
 						<p:outputLabel for="listEntity" value="Select Entity:" />
 						<p:selectOneMenu id="listEntity"
@@ -80,6 +83,9 @@
 						<h:outputText value="Can Create User: " />
 						<p:selectBooleanCheckbox
 							value="#{userController.user.canCreateUser}" />
+						<h:outputText value="Send Email: " />
+						<p:selectBooleanCheckbox
+							value="#{userController.sendEmail}" />
 					</p:panelGrid>
 				</h:form>
 			</p:dialog>
